/*
Copyright © 2024 NAME HERE <EMAIL ADDRESS>
*/
syntax = "proto3";

package pbgoods;

option go_package = "aike/proto/pbgoods";

import "pbcommon/pbcommon.proto";


message GoodsModel{
  int64 id = 1;
  string createdAt = 2;
  string updatedAt = 3;
  string goodsName = 4; // 商品名称
  string goodsNo = 5; // 商品编码
  int64 videoId = 6; // 主图视频id
  int64 videoCoverId = 7; // 主图视频url
  string sellingPoint = 8; // 卖点
  SpecType specType = 9; // 商品规格
  int32 goodsPriceMin = 10; // 商品价格(最低)
  int32 goodsPriceMax = 11; // 商品价格(最高)
  int32 linePriceMin = 12; // 划线价格(最低)
  int32 linePriceMax = 13; // 划线价格(最高)
  int32 stockTotal = 14; // 库存总量(包含所有sku)
  DeductStockType deductStockType = 15; // 库存计算方式
  string content =16; // 商品详情
  int64 salesInitial = 17;  // 初始销量
  int64 salesActual = 18;  // 实际销量
  int64 delivery_id = 19; // 配送模版id
  int32 isPointsGift = 20; // 是否开启积分赠送(1开启 0关闭)
  int32 isPointsDiscount= 21; // 是否允许使用积分抵扣(1允许 0不允许)
  int32 isOnSiteService = 22; // 是否支持上门服务(1支持 0不支持)
  int32 isRecommend = 23; // 是否推荐(1推荐 0不推荐)
  int32 isNew = 24; // 是否新品(1新品 0非新品)
  int32 isHot = 25; // 是否热销(1热销 0非热销)
  GoodsStatusType status = 26; // 商品状态
  int32 sort = 27; // 排序
  int64 shopId = 28; // 商铺id
}

enum SpecType{
  SpecTypeUnknown = 0;
  Singleton = 1;  // 单规格
  Multiple = 2;  // 多规格
}

enum DeductStockType{
  DeductStockTypeUnknown = 0;
  OrderDeductStock = 1;  // 下单减库存
  PayDeductStock = 2;  // 支付减库存
}

enum GoodsStatusType{
  GoodsStatusTypeUnknown = 0;
  GoodsStatusNormal = 1;  // 正常
  GoodsStatusOff = 2;  // 下架
}

message FindGoodsArgs{
  pbcommon.PageInfo pageInfo = 1;
  GoodsModel query = 2;
}

message FindGoodsReply{
  pbcommon.EnumCode code = 1;
  string msg = 2;
  GoodsModel data =3;
  repeated GoodsModel list = 4;
  int64 total = 5;
}

service Goods {
  rpc CreateGoods(GoodsModel) returns(pbcommon.CommonResult){}
  rpc UpdateGoods(GoodsModel) returns(pbcommon.CommonResult){}
  rpc DeleteGoods(pbcommon.IdArgs) returns(pbcommon.CommonResult){}
  rpc FindGoodsById(pbcommon.IdArgs) returns(FindGoodsReply){}
  rpc FindGoodsList(FindGoodsArgs) returns(FindGoodsReply){}
}